updated ignorables, and project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dirmortgage",
+  "name": "angular-mortgage-widget",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
